opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: ["David Scott"]
license: "ISC"
homepage: "https://github.com/mirage/ocaml-qcow"
dev-repo: "git+https://github.com/mirage/ocaml-qcow.git"
bug-reports: "https://github.com/mirage/ocaml-qcow/issues"
tags: [
  "org:mirage"
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "qcow" {= version}
  "cmdliner"
  "cstruct"
  "result"
  "unix-type-representations"
  "lwt"
  "mirage-block" {>= "3.0.0"}
  "mirage-time"
  "sha" {>= "1.10"}
  "sexplib" {< "v0.14"}
  "logs"
  "fmt" {>= "0.8.2"}
  "astring"
  "io-page"
  "ounit" {with-test}
  "mirage-block-ramdisk" {with-test}
  "ezjsonm" {with-test}
]
synopsis: "A command-line tool for manipulating qcow2-formatted data"
