opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: ["David Scott"]
license: "ISC"
homepage: "https://github.com/mirage/ocaml-qcow"
dev-repo: "git+https://github.com/mirage/ocaml-qcow.git"
bug-reports: "https://github.com/mirage/ocaml-qcow/issues"
doc: "https://mirage.github.io/ocaml-qcow"
tags: [
  "org:mirage"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "base-bytes"
  "cstruct" {>= "3.4.0"}
  "result"
  "io-page-unix" {>= "2.0.0"}
  "lwt" {>= "4.0.0"}
  "mirage-block" {>= "3.0.0"}
  "mirage-block-unix" {>= "2.5.0"}
  "mirage-block-combinators"
  "mirage-sleep"
  "cmdliner"
  "sexplib"
  "logs"
  "fmt" {>= "0.8.2"}
  "astring"
  "prometheus"
  "unix-type-representations"
  "stdlib-shims"
  "sha"
  "ppx_deriving"
  "ppx_sexp_conv"
  "ounit" {with-test}
  "mirage-block-ramdisk" {with-test}
  "ezjsonm" {with-test}
]
synopsis: "Support for Qcow2 images"
description: """
[![Build Status](https://travis-ci.org/mirage/ocaml-qcow.png?branch=master)](https://travis-ci.org/mirage/ocaml-qcow) [![Coverage Status](https://coveralls.io/repos/mirage/ocaml-qcow/badge.png?branch=master)](https://coveralls.io/r/mirage/ocaml-qcow?branch=master)

Please read [the API documentation](https://mirage.github.io/ocaml-qcow/).

Features
--------

- supports `resize`
- exposes sparseness information
- produces files which can be understood by qemu (although not in
  reverse since we don't support many features)

Example
-------

In a top-level like utop:
```ocaml"""
x-maintenance-intent: [ "(latest)" ]
