(executable
 (name main)
 (public_name qcow-tool)
 (package qcow-tool)
 (libraries qcow qcow_stream io-page logs logs.fmt sha unix-type-representations
   cmdliner sexplib mirage-block-combinators mirage-block-unix)
 (preprocess
  (pps ppx_sexp_conv)))

(cram
 (package qcow-tool)
 (enabled_if (and (not (= %{architecture} "x86_32")) (not (= %{architecture} "arm32"))))
 (deps main.exe))
