(env
  (dev (flags (:standard -g -w -67-69)))
  (release (flags (:standard -w -67-69)))
)

(library
  (name qcow_types)
  (public_name qcow-types)
  (modules (:standard \ qcow qcow_debug qcow_block_cache qcow_cstructs
                      qcow_padded qcow_recycler qcow_stream
                      qcow_mapping qcow_mapping_test))
  (libraries
    astring
    (re_export cstruct)
    (re_export diet)
    (re_export logs)
    (re_export lwt)
    (re_export mirage-block)
    (re_export prometheus)
    (re_export sexplib)
  )
  (wrapped false)
  (preprocess
    (pps ppx_sexp_conv)
  )
)

(library
  (name qcow_stream)
  (public_name qcow-stream)
  (modules qcow_stream qcow_mapping)
  (libraries
    cstruct-lwt
    io-page
    lwt.unix
    qcow_types
  )
  (foreign_stubs
    (language c)
    (names qcow_mapping_stubs))
  (wrapped false)
  (preprocess
    (pps ppx_sexp_conv)
  )
)

(test
  (modes native)
  (name qcow_mapping_test)
  (modules qcow_mapping_test)
  (libraries alcotest qcow_stream)
  )

(library
  (name qcow)
  (public_name qcow)
  (modules qcow qcow_debug qcow_block_cache qcow_cstructs
           qcow_padded qcow_recycler)
  (libraries
    fmt
    io-page
    mirage-sleep
    qcow_types
    )
  (wrapped false)
  (preprocess
    (pps ppx_sexp_conv)
  )
)

(rule
 (targets qcow_word_size.ml)
 (action
  (run ../generator/gen.exe -o %{targets})))
